common-applications/test-environment/openeuler-sbom/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-sbom
  name: openeuler-sbom
