common-applications/test-environment/openeuler-sbom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbom-service
  namespace: openeuler-sbom
spec:
  ports:
  - name: sbom-api-endpoint
    port: 80
    targetPort: 8100
  selector:
    app: sbom-server
  type: ClusterIP
