common-applications/test-environment/openeuler-sbom/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sbom-server-ingress
  namespace: openeuler-sbom
spec:
  tls:
    - hosts:
        - sbom.test.osinfra.cn
      secretName: sbom-server-tls
  rules:
    - host: sbom.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: sbom-service
              servicePort: 80
            path: /
